--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+#list {
+    list-style-type: none;
+    position : relative;
+    left : 40px;
+    
+  }
+
+  li{
+    list-style-type: none;
+  }
+
+  #up{
+    position : absolute;
+    height: 110px;
+    top: -50px;
+    left : -180px;
+    width : 900px;
+    z-index: 1;
+}
+
+#b1{
+  position : absolute;
+  left : 130px;
+  z-index: 2;
+}
+
+#b2{
+  position : absolute;
+  z-index: 2;
+}
+
+#close {
+  position: absolute;
+  z-index : 2;
+  left : 240px;
+  top : 85px;
+}
+
+
+  
